Add links to projects

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
                 </p>
                 <div class="navigation-buttons">
-                  <a  href="#" class="btn custom-button"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Link</a>
-                  <a href="#" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
+                  <a  href="https://trade-track-client.onrender.com" class="btn custom-button"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Link</a>
+                  <a href="https://github.com/Dave-Palmer/IoD-capstone-tradetrack-frontend" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
                  </div>
       </div>
             </div>
@@ -108,8 +108,8 @@
 
                 </p>
                 <div class="navigation-buttons">
-                  <a  href="#" class="btn custom-button"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Link</a>
-                  <a href="#" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
+                  <a  href="https://climbingnz.onrender.com" class="btn custom-button"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Link</a>
+                  <a href="https://github.com/Dave-Palmer/Mini-Project-2-Climbing" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
                  </div>
               </div>
             </div>
@@ -136,8 +136,8 @@
                 It uses a couple of free APIs, one for a random dad joke and one for the beer recipes
                 </p>
                 <div class="navigation-buttons">
-                  <a  href="#" class="btn custom-button"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Link</a>
-                  <a href="#" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
+                  <a  href="https://brewing.onrender.com" class="btn custom-button"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Link</a>
+                  <a href="https://github.com/Dave-Palmer/Mini-Project-1-Beer" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
                  </div>
               </div>
             </div>
