--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           I’m looking to continue my software development journey and land a job as a junior developer.
         </p>
         <div class="d-flex justify-content-center">
-          <a href="#"><img class="tech-icon m-1" src="./public/images/640px-LinkedIn_logo_initials.png" alt=""></a>
-          <a href="#"><img class="tech-icon m-1" src="./public/images/github-mark.png" alt=""></a>
+          <a href="https://linkedin.com/in/dave-palmer-a39b7b275" target="_blank"><img class="tech-icon m-1" src="./public/images/640px-LinkedIn_logo_initials.png" alt=""></a>
+          <a href="https://github.com/Dave-Palmer" target="_blank"><img class="tech-icon m-1" src="./public/images/github-mark.png" alt=""></a>
         </div>
       </div>
       <h3 class="mt-4 mb-4">Here are some projects i've made</h3>
@@ -80,8 +80,8 @@
 
                 </p>
                 <div class="navigation-buttons">
-                  <a  href="https://trade-track-client.onrender.com" class="btn custom-button"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Link</a>
-                  <a href="https://github.com/Dave-Palmer/IoD-capstone-tradetrack-frontend" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
+                  <a  href="https://trade-track-client.onrender.com" target="_blank" class="btn custom-button"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Link</a>
+                  <a href="https://github.com/Dave-Palmer/IoD-capstone-tradetrack-frontend" target="_blank" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
                  </div>
       </div>
             </div>
@@ -108,8 +108,8 @@
 
                 </p>
                 <div class="navigation-buttons">
-                  <a  href="https://climbingnz.onrender.com" class="btn custom-button"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Link</a>
-                  <a href="https://github.com/Dave-Palmer/Mini-Project-2-Climbing" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
+                  <a  href="https://climbingnz.onrender.com" target="_blank" class="btn custom-button"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Link</a>
+                  <a href="https://github.com/Dave-Palmer/Mini-Project-2-Climbing" target="_blank" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
                  </div>
               </div>
             </div>
@@ -136,8 +136,8 @@
                 It uses a couple of free APIs, one for a random dad joke and one for the beer recipes
                 </p>
                 <div class="navigation-buttons">
-                  <a  href="https://brewing.onrender.com" class="btn custom-button"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Link</a>
-                  <a href="https://github.com/Dave-Palmer/Mini-Project-1-Beer" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
+                  <a  href="https://brewing.onrender.com" target="_blank" class="btn custom-button"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Link</a>
+                  <a href="https://github.com/Dave-Palmer/Mini-Project-1-Beer" target="_blank" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
                  </div>
               </div>
             </div>
@@ -169,8 +169,8 @@
                  </ul>
                 </p>
                 <div class="navigation-buttons">
-               <a  href="#" class="btn custom-button"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Link</a>
-                <a href="#" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
+               <a  href="#" class="btn custom-button disabled"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Coming soon</a>
+                <a href="https://github.com/Dave-Palmer/YelpCamp" target="_blank" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
               </div>
               </div>
             </div>
