add link for yelp camp demo

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                  </ul>
                 </p>
                 <div class="navigation-buttons">
-               <a  href="#" class="btn custom-button disabled"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Coming soon</a>
+               <a  href="https://yelpcamp-t2dh.onrender.com" class="btn custom-button"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Link</a>
                 <a href="https://github.com/Dave-Palmer/YelpCamp" target="_blank" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
               </div>
               </div>
