change some text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p>
           After 13 years of being in the skilled trades as an Electrician, I had decided a change was due. 
           Settling with the decision last year to take the leap and steer my career towards the I.T industry, I started an online web developer bootcamp on Udemy.
-          Quickly, I found myself getting the hang of the basic concepts and enjoyed learning to code.
+          I found myself quickly getting the hang of the basic concepts and enjoying learning to code.
           Following that, I put my day job on hold and signed up for an intensive full-time software engineering course for 3 months.
           I’m looking to continue my software development journey and land a role as a junior developer.
         </p>
@@ -59,7 +59,7 @@
               </div>
           <hr class="solid">
                 <p class="card-text">
-                  Trade Track is my capstone project which I had to presented to the class at the end of the software engineering course.
+                  Trade Track is my capstone project which I had to present to the class at the end of the software engineering course.
                   It's a fullstack web application built with M.E.R.N. It's designed to create a simple way to track tools and items moving between staff in a busy workplace.
                   <div class="card-text">Admin User can:</div>
                   <ul class="card-text">
