Add guinness count project

--- a/index.html
+++ b/index.html
@@ -45,6 +45,42 @@
           <div class="col center-item mb-5">
             <div class="card shadow" style="width: 80%">
               <img
+                src="./public/images/Screenshot 2024-07-28 at 10.25.43 AM.png"
+                class="card-img-top"
+                alt="..." />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title text-center">Guinness count</h5>
+                <hr class="solid">
+              <div class="tech-stack row">
+                <div class="col-3 center-item"><img class='tech-icon' src="./public/images/next-js.svg" alt=""></div>
+                <div class="col-3 center-item"><img class='tech-icon' src="./public/images/Typescript_logo.png" alt=""></div>
+                   <div class="col-3 center-item"><img class='tech-icon' src="./public/images/nextui.png" alt=""></div>
+                   <div class="col-3 center-item"><img class='tech-icon' src="./public/images/mongodb.png" alt=""></div>
+              </div>
+          <hr class="solid">
+                <p class="card-text">
+                  I built this project from scratch primarily to get some practice with using Next.js and Typescript. It's a basic web application to track and share everytime you drink a Guinness.
+                  <div class="card-text">Users can:</div>
+                  <ul class="card-text">
+                    <li>-Register an account</li>
+                    <li>-Post everytime they have a Guinness</li>
+                    <li>-View friends posts</li>
+                    <li>-View friend requests</li>
+                    <li>-Send friend requests</li>
+                    <li>-Remove freinds</li>
+                  </ul>
+
+                </p>
+                <div class="navigation-buttons">
+                  <a  href="https://guinness-count-app.vercel.app/" target="_blank" class="btn custom-button"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Link</a>
+                  <a href="https://github.com/Dave-Palmer/guinness-count-app" target="_blank" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
+                 </div>
+      </div>
+            </div>
+          </div>
+          <div class="col center-item mb-5">
+            <div class="card shadow" style="width: 80%">
+              <img
                 src="./public/images/Screenshot 2023-08-07 at 9.17.17 PM.png"
                 class="card-img-top"
                 alt="..." />
@@ -59,7 +95,7 @@
               </div>
           <hr class="solid">
                 <p class="card-text">
-                  Trade Track is my capstone project which I had to present to the class at the end of the software engineering course.
+                  Trade Track is my capstone project for the software engineering course. I had design and build this application and present it to the class at the end of the course.
                   It's a fullstack web application built with M.E.R.N. It's designed to create a simple way to track tools and items moving between staff in a busy workplace.
                   <div class="card-text">Admin User can:</div>
                   <ul class="card-text">
