fix spelling mistake, add hover effect on profile links

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
           I’m looking to continue my software development journey and land a role as a junior developer.
         </p>
         <div class="d-flex justify-content-center">
-          <a href="https://linkedin.com/in/dave-palmer-a39b7b275" target="_blank"><img class="tech-icon m-1" src="./public/images/640px-LinkedIn_logo_initials.png" alt=""></a>
-          <a href="https://github.com/Dave-Palmer" target="_blank"><img class="tech-icon m-1" src="./public/images/github-mark.png" alt=""></a>
+          <a class="profile-link" href="https://linkedin.com/in/dave-palmer-a39b7b275" target="_blank"><img class="tech-icon m-1" src="./public/images/640px-LinkedIn_logo_initials.png" alt=""></a>
+          <a class="profile-link" href="https://github.com/Dave-Palmer" target="_blank"><img class="tech-icon m-1" src="./public/images/github-mark.png" alt=""></a>
         </div>
       </div>
-      <h3 class="mt-4 mb-4">Here are some projects i've made</h3>
+      <h3 class="mt-4 mb-4">Here are some projects I've made</h3>
       <section class="container-lg">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 justify-content-center">
           <div class="col center-item mb-5">
@@ -67,7 +67,7 @@
                     <li>-View friends posts</li>
                     <li>-View friend requests</li>
                     <li>-Send friend requests</li>
-                    <li>-Remove freinds</li>
+                    <li>-Remove friends</li>
                   </ul>
 
                 </p>
