Update some text

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
               </div>
           <hr class="solid">
                 <p class="card-text">
-                  Trade Track is my capstone project for the software engineering course. I had design and build this application and present it to the class at the end of the course.
-                  It's a fullstack web application built with M.E.R.N. It's designed to create a simple way to track tools and items moving between staff in a busy workplace.
+                  Trade Track is my capstone project from the software engineering course. I had to design and build this application and present it to the class at the end of the course.
+                  It's a fullstack web application built with M.E.R.N. It's designed to create a simple way to keep track of tools and items moving between staff in a busy workplace.
                   <div class="card-text">Admin User can:</div>
                   <ul class="card-text">
                     <li>-Add/remove individual staff members and set passwords for logging in</li>
@@ -105,9 +105,9 @@
                   </ul>
                   <div class="card-text">Staff Users can:</div>
                   <ul class="card-text">
-                    <li>-View all tools and vehicles assigned to them, lend tools to other staff members, report an issue with a tool</li>
+                    <li>-View all tools and vehicles assigned to them, lend tools to other staff members, and report an issue with a tool</li>
                     <li>-Borrow availble tools from the workshop</li>
-                    <li>-update Odometer reading on the vehicle assigned to them</li>
+                    <li>-Update the vehicle odometer record for the vehicle assigned to them</li>
                   </ul>
 
                 </p>
@@ -130,7 +130,6 @@
                 <div class="tech-stack row">
                   <div class="col-3 center-item"><img class='tech-icon' src="./public/images/react.png" alt=""></div>
                    <div class="col-3 center-item"><img class='tech-icon' src="./public/images/materialUI.png" alt=""></div>
-                  <!-- <div class="col-3 center-item"><img class='tech-icon' src="./public/images/css3.png" alt=""></div> -->
          </div>
          <hr class="solid">
                 <p class="card-text">
@@ -164,7 +163,7 @@
          <hr class="solid">
                 <p class="card-text">
                 This is my first mini project from the software engineering course during the frontend module.
-                It's to showcase a basic responsive webpage layout (and my interest in beer & brewing of course).
+                It's to showcase a basic responsive layout (and my interest in beer & brewing of course).
                 It fetches data from a couple of free APIs, one for a random dad joke and one for the breweries.
                 </p>
                 <div class="navigation-buttons">
