Update about me text

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       <div class="pt-5 container ">
         <h2>A little about me..</h2>
         <p>
-          After 13 years of being in the skilled trades as an Electrician, I had decided a change was due. 
-          Settling with the decision last year to take the leap and steer my career towards the I.T industry, I started an online web developer bootcamp on Udemy.
-          I found myself quickly getting the hang of the basic concepts and enjoying learning to code.
-          Following that, I put my day job on hold and signed up for an intensive full-time software engineering course for 3 months.
-          I’m looking to continue my software development journey and land a role as a junior developer.
+          After 13 years as an electrician in the skilled trades, I decided it was time for a career change. 
+          In 2022, I took the leap and set my sights on the IT industry, starting with an online web development course on Udemy. 
+          I quickly grasped the fundamentals and discovered a real passion for coding and development. 
+          Following that, I put my day job on hold and enrolled in an intensive, full-time software engineering bootcamp, dedicating three months to hands-on learning. 
+          Now, I’m excited to continue my journey in software development and land a role within the industry.
         </p>
         <div class="d-flex justify-content-center">
           <a class="profile-link" href="https://linkedin.com/in/dave-palmer-a39b7b275" target="_blank"><img class="tech-icon m-1" src="./public/images/640px-LinkedIn_logo_initials.png" alt=""></a>
