--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                  </ul>
                 </p>
                 <div class="navigation-buttons">
-               <a  href="https://yelpcamp-t2dh.onrender.com" class="btn custom-button"><span><img class="button-image" src="./public/images/link.png" alt=""></span>Link</a>
+               <a  href="https://yelpcamp-t2dh.onrender.com" class="btn custom-button disabled" role="button" aria-disabled="true"><span><img class="button-image" src="./public/images/link.png" alt=""></span>To come...</a>
                 <a href="https://github.com/Dave-Palmer/YelpCamp" target="_blank" class="btn custom-button"><span><img class="button-image" src="./public/images/github-mark.png" alt=""></span>Code</a>
               </div>
               </div>
